--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -199,8 +199,8 @@
     display: none;
   }
   .leftmenu-toggle {
-    padding-left: 20px;
-    padding-bottom: 5px;
+    padding: 8px 10px 5px 10px;
+    background-color: @gray-light;
     position: fixed;
     top: 0;
     left: 0;
