--- a/less/navbar.less
+++ b/less/navbar.less
@@ -670,10 +670,11 @@
   .topbar-logo {
     position: absolute;
     top: 10px;
-    left: 50px;
+    left: 55px;
     width: 65%;
     @media (min-width: @screen-xs) {
       width: 50%;
+      top: 8px;
     }
     @media (min-width: @screen-sm) {
       left: 20px;
