--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -2,7 +2,8 @@
   <div class="ku-navbar-header">
     Kommunikation
   </div>
-  <ul id="leftmenu" class="nav">
+  <nav id="leftmenu">
+  <ul id="" class="nav">
     <li><a href="#">Forside</a></li>
     <li><a href="#">KU page templates</a>
       <ul>
@@ -38,4 +39,5 @@
     <li><a href="#">Separated link</a></li>
     <li><a href="#">One more separated link</a></li>
   </ul>
+  </nav>
 </div>
