--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -33,7 +33,8 @@
   top: 100%;
   left: 0;
   z-index: @zindex-dropdown;
-  display: none; // none by default, but block on "open" of the menu
+ // display: none; // none by default, but block on "open" of the menu
+  opacity: 0; // KU style
   float: left;
   min-width: 160px;
   padding: 5px 0;
