--- a/less/navbar.less
+++ b/less/navbar.less
@@ -20,7 +20,7 @@
     opacity: 0;
   }
   100% {
-    opacity: 0.95;
+    opacity: 0.94;
   }
 }
 .ku-nav {
@@ -71,7 +71,7 @@
           }
           &:hover {
             ul.dropdown-menu {
-              display: block;
+              opacity: .94;
               animation: fadeIn 0.4s;
             }
           }
