--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -2,8 +2,7 @@
   <div class="ku-navbar-header">
     Kommunikation
   </div>
-  <nav id="leftmenu">
-  <ul id="" class="nav">
+  <ul id="leftmenu" class="nav">
     <li><a href="#">Forside</a></li>
     <li><a href="#">KU page templates</a>
       <ul>
@@ -13,7 +12,7 @@
         <li><a href="../ku-gridboxes/">Template with left menu and grid boxes</a></li>
       </ul>
     </li>
-    <li><a href="#">Separated link</a>
+    <li><a href="#">Another link</a>
       <ul>
         <li><a href="#">Link 2.1</a>
           <ul>
@@ -31,13 +30,12 @@
       </ul>
     </li>
     <li><a href="#">One more very, very, very, long separated link</a></li>
-    <li><a href="#">One more separated link</a></li>
+    <li><a href="#">One more link</a></li>
   </ul>
   <hr class="menu-seperator">
   <ul id="leftmenu_2" class="nav">
     <li><a href="#">Action</a></li>
     <li><a href="#">Separated link</a></li>
-    <li><a href="#">One more separated link</a></li>
+    <li><a ref="#">One more separated link</a></li>
   </ul>
-  </nav>
 </div>
