--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -191,20 +191,17 @@
 <script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script type="text/javascript">
   $(function() {
-      // Top and global menus
-    //   var $globalMenu = $('#topbar_menu').children().clone();
-    //   var $globalMenu2 = $('#navbar_menu').children().clone().prepend('<li class="mm-divider">Global menu</li>');
-      var $mobimenu = $('#mobileleftmenu');
-    // Get all left menu items
-    // $( "#leftmenu li" ).each( function( i, e ){
-    //     var $leftmenus = $(this);
-    // });
+    // Global and left menu merging
+    var $leftmenu = $('#leftmenu').clone().wrapInner('<ul>').attr('id', 'local-menu');
+    var $leftmenu2 = $('#leftmenu_2').clone();
+    var $globalMenu = $('#topbar_menu').clone();
+    var $globalMenu2 = $('#navbar_menu').clone();
+    var $mobimenu = $('#mobileleftmenu');
+    console.log($leftmenu.html());
+    var $menuitems = $leftmenu.append($leftmenu2).append('<li class="mm-divider">Global menu</li>').append($globalMenu2).append($globalMenu);
 
-
-    $mobimenu.append($("#nav li, #topbar_menu li, #navbar_menu li").clone());
-console.log($mobimenu.html());
-
-    //$mobimenu.find('ul').removeClass('dropdown-menu');
+    $mobimenu.append($menuitems);
+    $mobimenu.find('ul').removeClass('dropdown-menu');
     $mobimenu.mmenu({
       offCanvas: {
         position: 'left',
@@ -220,16 +217,14 @@ console.log($mobimenu.html());
       onClick: {
         setSelected: true
       }
-  });
-
+    });
     // Open sub items from the global menu
     // $items.each(function() {
-    //
     //   $("li", this).each(function(i) {
     //     if ($(this).hasClass('dropdown')) {
     //       $(this).addClass('mm-opened');
     //     }
     //   });
-    // });
+    // })
   });
 </script>
