--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -8,12 +8,13 @@
       <ul>
         <li><a href="../ku-default/">Template with left menu</a></li>
         <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-        <li><a href="../ku-with-slideshow/">Template with left menu and slideshow</a></li>
-        <li><a href="../ku-gridboxes/">Template with left menu and grid boxes</a></li>
       </ul>
     </li>
-    <li><a href="#">Another link</a>
+    <li><a href="#">Special KU features</a>
       <ul>
+        <li><a href="../ku-with-slideshow/">Template with slideshow</a></li>
+        <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
+        <li><a href="../ku-datatables/">Template with data tables</a></li>
         <li><a href="#">Link 2.1</a>
           <ul>
             <li><a href="#">Link 3.1</a></li>
@@ -29,13 +30,13 @@
         </li>
       </ul>
     </li>
-    <li><a href="#">One more very, very, very, long separated link</a></li>
+    <li><a href="#">More links</a></li>
     <li><a href="#">One more link</a></li>
   </ul>
   <hr class="menu-seperator">
   <ul id="leftmenu_2" class="nav">
     <li><a href="#">Action</a></li>
     <li><a href="#">Separated link</a></li>
-    <li><a ref="#">One more separated link</a></li>
+    <li><a href="#">One more separated link</a></li>
   </ul>
 </div>
