--- a/less/panels.less
+++ b/less/panels.less
@@ -7,8 +7,16 @@
 .panel {
   margin-bottom: @line-height-computed;
   background-color: @panel-bg;
-  border: 1px solid transparent;
+  //border: 1px solid transparent;
   //border-radius: @panel-border-radius;
+
+  // KU: Panels with images
+  &.with-img {
+      .panel-body {
+          padding: 0;
+          overflow: hidden;
+      }
+  }
 }
 
 // Panel contents
