--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -107,13 +107,13 @@
 
 {% if site.github %}
 <script src="../dist/js/bootstrap.min.js"></script>
-{% elsif page.slug == 'examples' %}
+{% elsif page.slug == 'examples' or page.slug == "slideshow" %}
 <script src="../../dist/js/bootstrap.min.js"></script>
 {% else %}
 <script src="../dist/js/bootstrap.js"></script>
 {% endif %} {% if site.github %}
 <script src="../assets/js/docs.min.js"></script>
-{% elsif page.slug == 'examples' %}
+{% elsif page.slug == 'examples' or page.slug == "slideshow" %}
 <script src="../../assets/js/customize.min.js"></script>
 {% else %} {% for file in site.data.configBridge.paths.docsJs %}
 <script src="{{ file }}"></script>
@@ -132,7 +132,7 @@
 {% endfor %} {% endif %} {% endif %}
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-{% if page.slug == 'examples' %}
+{% if page.slug == 'examples' or page.slug == "slideshow" %}
 <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 {% else %}
 <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
@@ -187,6 +187,18 @@
   });
 </script>
 {% endif %}
+<!-- DataTables.js -->
+<script type="text/javascript" src="../../assets/js/datatables/datatables.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#datatable').dataTable({
+      'responsive': true,
+      'ordering': true,
+      'searching': true
+    });
+  });
+</script>
+
 <!-- Mobile menu -->
 <script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script type="text/javascript">
@@ -197,7 +209,7 @@
     var $globalMenu = $('#topbar_menu').clone();
     var $globalMenu2 = $('#navbar_menu').clone();
     var $mobimenu = $('#mobileleftmenu');
-    console.log($leftmenu.html());
+
     var $menuitems = $leftmenu.append($leftmenu2).append('<li class="mm-divider">Global menu</li>').append($globalMenu2).append($globalMenu);
 
     $mobimenu.append($menuitems);
