--- a/less/ku-bxslider.less
+++ b/less/ku-bxslider.less
@@ -38,7 +38,7 @@ ul.bxslider {
   .bx-controls-auto,
   .bx-pager {
     position: absolute;
-    bottom: -30px;
+    bottom: -20px;
     width: 100%;
   }
 }
@@ -65,11 +65,11 @@ ul.bxslider {
       background: #666;
       text-indent: -9999px;
       display: block;
-      width: 10px;
-      height: 10px;
+      width: 8px;
+      height: 8px;
       margin: 0 5px;
       outline: 0;
-      border-radius: 5px;
+      border-radius: 50%;
       &.active,
       &:focus,
       &:hover {
