--- a/less/mixins.less
+++ b/less/mixins.less
@@ -38,3 +38,6 @@
 @import "mixins/nav-vertical-align.less";
 @import "mixins/grid-framework.less";
 @import "mixins/grid.less";
+
+// Ku specific
+@import "mixins/ku-background-color-with-fallabck.less";
