--- a/less/mixins/ku-background-color-with-fallabck.less
+++ b/less/mixins/ku-background-color-with-fallabck.less
@@ -1,6 +1,6 @@
 // Create background colors with transoparency and fallback
 
-.backgroundColorFix(@color, @alpha:1) {
-  background: (@color);
-  background: rgba(red(@color), green(@color), blue(@color), @alpha);
+.backgroundColorFix(@theColor, @theAlpha) {
+  background: (@theColor);
+  background: rgba(red(@theColor), green(@theColor), blue(@theColor), @theAlpha);
 }
