--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -79,9 +79,9 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="input-group">
-          <input class="form-control" placeholder="Søg..." aria-label="Text input with segmented button dropdown">
+          <input class="form-control" placeholder="Søg..." aria-label="Inputfelt til søgeord">
           <div class="input-group-btn">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="caret"></span> <span class="sr-only">Toggle Dropdown</span> </button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="caret"></span> <span class="sr-only">Vis søgemuligheder</span> </button>
             <ul class="dropdown-menu dropdown-menu-right">
               <li><a href="#">Hele KU</a></li>
               <li><a href="#">Nyheder</a></li>
