--- a/less/navbar.less
+++ b/less/navbar.less
@@ -5,6 +5,7 @@
 //
 // Provide a static navbar from which we expand to create full-width, fixed, and
 // other navbar variations.
+
 .navbar {
   position: relative;
   min-height: @navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
@@ -19,12 +20,15 @@
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 0.94;
   }
 }
+
 .ku-nav {
   font-size: 1.085em;
+
   .navbar-nav {
     > li {
       > .dropdown-menu {
@@ -49,13 +53,16 @@
             right: @grid-gutter-width;
             left: auto;
           }
+
           &.open {
             &:after {
               content: '\e114';
             }
+
             ul li a:hover {
               background-color: #f2f2f2;
             }
+
             > a {
               background-color: #f2f2f2; // Open dropdown item
             }
@@ -69,18 +76,21 @@
               }
             }
           }
+
           &:hover {
             ul.dropdown-menu {
-                display: block;
-              opacity: .94;
+              display: block;
+              opacity: 0.94;
               animation: fadeIn 0.4s;
             }
           }
+
           &:after {
             display: none;
           }
         }
       }
+
       > a {
         &:hover {
           text-decoration: underline;
@@ -93,6 +103,7 @@
 //
 // Groups `.navbar-brand` and `.navbar-toggle` into a single component for easy
 // styling of responsive aspects.
+
 .navbar-header {
   &:extend(.clearfix all);
   @media (min-width: @grid-float-breakpoint) {
@@ -108,6 +119,7 @@
 // To start (on mobile devices) the navbar links, forms, and buttons are stacked
 // vertically and include a `max-height` to overflow in case you have too much
 // content for the user's viewport.
+
 .navbar-collapse {
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
@@ -116,6 +128,7 @@
   box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
   &:extend(.clearfix all);
   -webkit-overflow-scrolling: touch;
+
   &.in {
     overflow-y: auto;
   }
@@ -123,12 +136,14 @@
     width: auto;
     border-top: 0;
     box-shadow: none;
+
     &.collapse {
       display: block !important;
-      height: auto !important;
+      height: @ku-topbar-height !important; // auto
       padding-bottom: 0; // Override default setting
       overflow: visible !important;
     }
+
     &.in {
       overflow-y: visible;
     }
@@ -142,6 +157,7 @@
     }
   }
 }
+
 .navbar-fixed-bottom,
 .navbar-fixed-top {
   .navbar-collapse {
@@ -154,10 +170,11 @@
 // Both navbar header and collapse
 //
 // When a container is present, change the behavior of the header and collapse.
+
 .container,
 .container-fluid {
-   > .navbar-collapse,
-  > .navbar-header {
+   > .navbar-header,
+  > .navbar-collapse {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -172,6 +189,7 @@
 // Display the navbar across the entirety of the page or fixed it to the top or
 // bottom of the page.
 // Static top (unfixed, but 100% wide) navbar
+
 .navbar-static-top {
   z-index: @zindex-navbar;
   border-width: 0 0 1px;
@@ -180,6 +198,7 @@
   }
 }
 // Fix the top/bottom navbars when screen real estate supports it
+
 .navbar-fixed-bottom,
 .navbar-fixed-top {
   position: fixed;
@@ -191,26 +210,31 @@
     border-radius: 0;
   }
 }
+
 .navbar-fixed-top {
   top: 0;
   border-width: 0 0 1px;
 }
+
 .navbar-fixed-bottom {
   bottom: 0;
   margin-bottom: 0; // override .navbar defaults
   border-width: 1px 0 0;
 }
 // Brand/project name
+
 .navbar-brand {
   float: left;
   padding: @navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   line-height: @line-height-computed;
   height: @navbar-height;
+
   &:focus,
   &:hover {
     text-decoration: none;
   }
+
   > img {
     display: block;
   }
@@ -225,6 +249,7 @@
 //
 // Custom button for toggling the `.navbar-collapse`, powered by the collapse
 // JavaScript plugin.
+
 .navbar-toggle {
   position: relative;
   float: right;
@@ -248,6 +273,7 @@
     border-radius: 1px;
     background-color: @white-color;
   }
+
   .icon-bar + .icon-bar {
     margin-top: 4px;
   }
@@ -259,8 +285,10 @@
 //
 // Builds on top of the `.nav` components with its own modifier class to make
 // the nav the full height of the horizontal nav (above 768px).
+
 .navbar-nav {
   margin: (@navbar-padding-vertical / 2) -@navbar-padding-horizontal;
+
   > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -276,12 +304,15 @@
       background-color: transparent;
       border: 0;
       box-shadow: none;
-      .dropdown-header,
-      > li > a {
+
+       > li > a,
+      .dropdown-header {
         padding: 5px 15px 5px 25px;
       }
+
       > li > a {
         line-height: @line-height-computed;
+
         &:focus,
         &:hover {
           background-image: none;
@@ -293,8 +324,10 @@
   @media (min-width: @grid-float-breakpoint) {
     float: left;
     margin: 0;
+
     > li {
       float: left;
+
       > a {
         padding-top: @navbar-padding-vertical;
         padding-bottom: @navbar-padding-vertical;
@@ -306,6 +339,7 @@
 //
 // Extension of the `.form-inline` with some extra flavor for optimum display in
 // our navbars.
+
 .navbar-form {
   margin-left: -@navbar-padding-horizontal;
   margin-right: -@navbar-padding-horizontal;
@@ -316,9 +350,11 @@
   .box-shadow(@shadow);
   // Mixin behavior for optimum display
   .form-inline();
+
   .form-group {
     @media (max-width: @grid-float-breakpoint-max) {
       margin-bottom: 5px;
+
       &:last-child {
         margin-bottom: 0;
       }
@@ -339,11 +375,13 @@
 }
 // Dropdown menus
 // Menu position and menu carets
+
 .navbar-nav > li > .dropdown-menu {
   margin-top: 0;
   .border-top-radius(0);
 }
 // Menu position and menu caret support for dropups via extra dropup class
+
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
   .border-top-radius(@navbar-border-radius);
@@ -352,11 +390,14 @@
 // Buttons in navbars
 //
 // Vertically center a button within a navbar (when *not* in a form).
+
 .navbar-btn {
   .navbar-vertical-align(@input-height-base);
+
   &.btn-sm {
     .navbar-vertical-align(@input-height-small);
   }
+
   &.btn-xs {
     .navbar-vertical-align(22);
   }
@@ -364,6 +405,7 @@
 // Text in navbars
 //
 // Add a class to make any element properly align itself vertically within the navbars.
+
 .navbar-text {
   .navbar-vertical-align(@line-height-computed);
   @media (min-width: @grid-float-breakpoint) {
@@ -383,9 +425,11 @@
   .navbar-left {
     .pull-left();
   }
+
   .navbar-right {
     .pull-right();
     margin-right: -@navbar-padding-horizontal;
+
     ~ .navbar-right {
       margin-right: 0;
     }
@@ -394,29 +438,36 @@
 // Alternate navbars
 // --------------------------------------------------
 // Default navbar
+
 .navbar-default {
   background-color: @navbar-default-bg;
   border-color: @navbar-default-border;
+
   .navbar-brand {
     color: @navbar-default-brand-color;
+
     &:focus,
     &:hover {
       color: @navbar-default-brand-hover-color;
       background-color: @navbar-default-brand-hover-bg;
     }
   }
+
   .navbar-text {
     color: @navbar-default-color;
   }
+
   .navbar-nav {
     > li > a {
       color: @navbar-default-link-color;
+
       &:focus,
       &:hover {
         color: @navbar-default-link-hover-color;
         background-color: @navbar-default-link-hover-bg;
       }
     }
+
     > .active > a {
       &,
       &:focus,
@@ -425,6 +476,7 @@
         background-color: @navbar-default-link-active-bg;
       }
     }
+
     > .disabled > a {
       &,
       &:focus,
@@ -434,16 +486,20 @@
       }
     }
   }
+
   .navbar-toggle {
     border-color: @navbar-default-toggle-border-color;
+
     &:focus,
     &:hover {
       background-color: @navbar-default-toggle-hover-bg;
     }
+
     .icon-bar {
       background-color: @navbar-default-toggle-icon-bar-bg;
     }
   }
+
   .navbar-collapse,
   .navbar-form {
     //border-color: @navbar-default-border;
@@ -464,12 +520,14 @@
       .open .dropdown-menu {
         > li > a {
           color: @navbar-default-link-color;
+
           &:focus,
           &:hover {
             color: @navbar-default-link-hover-color;
             background-color: @navbar-default-link-hover-bg;
           }
         }
+
         > .active > a {
           &,
           &:focus,
@@ -478,6 +536,7 @@
             background-color: @navbar-default-link-active-bg;
           }
         }
+
         > .disabled > a {
           &,
           &:focus,
@@ -494,16 +553,20 @@
   // Add a class to ensure links outside the navbar nav are colored correctly.
   .navbar-link {
     color: @navbar-default-link-color;
+
     &:hover {
       color: @navbar-default-link-hover-color;
     }
   }
+
   .btn-link {
     color: @navbar-default-link-color;
+
     &:focus,
     &:hover {
       color: @navbar-default-link-hover-color;
     }
+
     &[disabled],
     fieldset[disabled] & {
       &:focus,
@@ -514,24 +577,32 @@
   }
 }
 // Inverse navbar
+
 .navbar-inverse {
   background-color: @navbar-inverse-bg;
   height: @ku-topbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
   border-color: @navbar-inverse-border;
+
   .navbar-brand {
     color: @navbar-inverse-brand-color;
+
     &:focus,
     &:hover {
       color: @navbar-inverse-brand-hover-color;
       background-color: @navbar-inverse-brand-hover-bg;
     }
   }
+
   .navbar-text {
     color: @navbar-inverse-color;
   }
+
   .navbar-nav {
+    margin-top: 1px; //KU
+
     > li > a {
       color: @navbar-inverse-link-color;
+
       &:focus,
       &:hover {
         color: @navbar-inverse-link-hover-color;
@@ -541,6 +612,7 @@
       &.dk,
       &.eng {
         padding-right: (@grid-gutter-width / 2);
+
         > img {
           display: inline-block;
           height: 13px;
@@ -549,6 +621,7 @@
         }
       }
     }
+
     > .active > a {
       &,
       &:focus,
@@ -557,6 +630,7 @@
         background-color: @navbar-inverse-link-active-bg;
       }
     }
+
     > .disabled > a {
       &,
       &:focus,
@@ -569,14 +643,17 @@
   // Darken the responsive nav toggle
   .navbar-toggle {
     border-color: @navbar-inverse-toggle-border-color;
+
     &:focus,
     &:hover {
       background-color: @navbar-inverse-toggle-hover-bg;
     }
+
     .icon-bar {
       background-color: @navbar-inverse-toggle-icon-bar-bg;
     }
   }
+
   .navbar-collapse,
   .navbar-form {
     //border-color: darken(@navbar-inverse-bg, 7%);
@@ -597,17 +674,21 @@
         > .dropdown-header {
           border-color: @navbar-inverse-border;
         }
+
         .divider {
           background-color: @navbar-inverse-border;
         }
+
         > li > a {
           color: @navbar-inverse-link-color;
+
           &:focus,
           &:hover {
             color: @navbar-inverse-link-hover-color;
             background-color: @navbar-inverse-link-hover-bg;
           }
         }
+
         > .active > a {
           &,
           &:focus,
@@ -616,6 +697,7 @@
             background-color: @navbar-inverse-link-active-bg;
           }
         }
+
         > .disabled > a {
           &,
           &:focus,
@@ -640,6 +722,7 @@
             background: @white-color;
           }
         }
+
         > a {
           color: @navbar-inverse-link-color;
           padding: @padding-xs-horizontal 6px @padding-xs-horizontal 7px;
@@ -647,18 +730,23 @@
       }
     }
   }
+
   .navbar-link {
     color: @navbar-inverse-link-color;
+
     &:hover {
       color: @navbar-inverse-link-hover-color;
     }
   }
+
   .btn-link {
     color: @navbar-inverse-link-color;
+
     &:focus,
     &:hover {
       color: @navbar-inverse-link-hover-color;
     }
+
     &[disabled],
     fieldset[disabled] & {
       &:focus,
@@ -683,7 +771,7 @@
       top: 10px;
     }
     @media (min-width: @screen-md) {
-        top: 8px;
+      top: 8px;
     }
     display: flex;
     align-items: center;
