--- a/less/navbar.less
+++ b/less/navbar.less
@@ -605,8 +605,9 @@
 
       &:focus,
       &:hover {
-        color: @navbar-inverse-link-hover-color;
-        background-color: @navbar-inverse-link-hover-bg;
+        //color: @navbar-inverse-link-hover-color;
+        text-decoration: @link-hover-decoration;
+        //background-color: @navbar-inverse-link-hover-bg;
       }
       // KU language switcher icons
       &.dk,
